# py-app-engine-common-utils

./: README.md  pyproject.toml  requirements.txt
mcm_common_utils/: aws_sdk_utils.py  common_constants.py
mcm_common_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcm_common_utils/exceptions/: exception_classes.py  exception_handler.py
mcm_common_utils/nlp/: constants.py  pluralize.py  search_query_expand.py  spelling.py  synonyms.py  termset_expander.py  tokenize.py  verb_inflector.py
mcm_common_utils/tests/: test_pluralize.py  test_search_query_expand.py  test_spelling.py  test_synonyms.py
